--- a/frontend/app/templates/components/badge-table.hbs
+++ b/frontend/app/templates/components/badge-table.hbs
@@ -34,4 +34,18 @@
             </tr>
         {{/each}}
     </tbody>
+    <tfoot>
+        <tr>
+            <th colspan="4">
+                <div class="ui right floated pagination menu">
+                    <a class="icon item" {{action 'prevPage'}}>
+                        <i class="left chevron icon"></i>
+                    </a>
+                    <a class="icon item" {{action 'nextPage'}}>
+                        <i class="right chevron icon"></i>
+                    </a>
+                </div>
+            </th>
+        </tr>
+    </tfoot>
 </table>
