--- a/frontend/app/styles/partials/my-badges.scss
+++ b/frontend/app/styles/partials/my-badges.scss
@@ -1,10 +1,11 @@
-.my-badge {
-  padding-bottom: 40px;
-  position: relative;
-  top: 80px;
-}
-
-.ui.card {
-  display: inline-block;
-  margin-right: 50px;
+.ui.segment {
+  .cards {
+    .card {
+      padding-right: 10px;
+      img {
+        height: 300px;
+        width: 100%;
+      }
+    }
+  }
 }
