Adds Social Media icons in footer
Removes console.log

--- a/frontend/app/templates/components/footer-main.hbs
+++ b/frontend/app/templates/components/footer-main.hbs
@@ -6,7 +6,11 @@
         <div class="right menu">
             <strong class="item">Follow us on</strong>
             {{#each socialMedia as |media|}}
-                <a class="item" href={{media.link}} target="_blank">{{media.id}}</a>
+                <a class="item" href={{media.link}} target="_blank">
+                    <i class="fa fa-{{media.id}}" aria-hidden="true">
+                    {{first-cap media.id }}
+                    </i>
+                </a>
             {{/each}}
         </div>
     </div>
