Fixes #1221 : Modifies the my-badges component (#1226)
* Modifies the my-badges component

* Codacy Fix

--- a/frontend/app/styles/partials/my-badges.scss
+++ b/frontend/app/styles/partials/my-badges.scss
@@ -1,10 +1,12 @@
-.my-badge {
-  padding-bottom: 40px;
-  position: relative;
-  top: 80px;
-}
+.ui.segment {
+  .cards {
+    .card {
+      padding-right: 10px;
 
-.ui.card {
-  display: inline-block;
-  margin-right: 50px;
+      img {
+        height: 300px;
+        width: 100%;
+      }
+    }
+  }
 }
