--- a/frontend/app/templates/components/user-component/user-password.hbs
+++ b/frontend/app/templates/components/user-component/user-password.hbs
@@ -1,31 +1,36 @@
 <h2 class="ui header">Password</h2>
-<h5 class="ui dividing header">Change your password or recover your current one.</h5>
-<form class="ui form">
-    <div class="field">
-    <label>Current Password</label>
-    <div class="fields">
-        <div class="ten wide field">
-        <input placeholder="Default User Password" type="text">
-        </div>
-    </div>
-    </div>
-    <div class="field">
-    <label>New Password</label>
-    <div class="fields">
-        <div class="ten wide field">
-        <input placeholder="New Password" type="text">
-        </div>
-    </div>
-    </div>
-    <div class="field">
-    <label>Verify Password</label>
-    <div class="fields">
-        <div class="ten wide field">
-        <input placeholder="" type="text">
-        </div>
-    </div>
-    </div>
-    <div class="ui button" tabindex="0">
-    Save Changes
-    </div>
-</form>
+{{#if user.password}}
+    <h5 class="ui dividing header">Change your password or recover your current one.</h5>
+        <form class="ui form" {{action 'updateUserPassword' on="submit"}}>
+            <div class="field">
+                <label>Current Password</label>
+                    <div class="fields">
+                        <div class="ten wide field">
+                            {{input type="password" name=password value=user.password}}
+                        </div>
+                    </div>
+            </div>
+            <div class="field">
+                <label>New Password</label>
+                    <div class="fields">
+                        <div class="ten wide field">
+                            {{input type="password" id="newPassword" name=newPassword placeholder="New Password"}}
+                        </div>
+                    </div>
+            </div>
+            <div class="field">
+            <label>Verify Password</label>
+                <div class="fields">
+                    <div class="ten wide field">
+                        {{input type="password" id="newPasswordVerify" name=newPasswordVerify placeholder="Verify New Password"}}
+                    </div>
+                </div>
+            </div>
+            <button type="submit" class="ui basic orange button" tabindex="0">
+                Save Changes
+            </button>
+        </form>
+{{else}}
+    <h4 class="ui header">You are not allowed to change your Password.</h4>
+    <h4 class="ui secondary header">You have used other Login Method for Logging In to Badgeyay.</h4>
+{{/if}}
