Change the Badge Size to Paper Size

--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -32,12 +32,12 @@
     <div class="ui raised segment">
         <div class="ui form width-container">
             <p>
-                <b>Select from one of the Badge Sizes</b>
+                <b>Select from one of the Paper Sizes</b>
             </p>
             {{#ui-accordion class="styled fluid"}}
             <div class="title">
                 <i class="plus icon"></i>
-                Badge Size
+                Paper Size
             </div>
             <div class="content">
                 <div class="center aligned">
