--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -11,9 +11,9 @@
                         My Badges
                     {{/link-to}}
                     {{#if authToken.adminValid}}
-                    {{#link-to 'admin' class="large item navbar-dropdown upper"}}
-                        Admin
-                    {{/link-to}}
+                        {{#link-to 'admin' class="large item navbar-dropdown upper"}}
+                            Admin
+                        {{/link-to}}
                     {{/if}}
                     {{#link-to 'my-profile' class="large item navbar-dropdown upper"}}
                         Settings
@@ -29,11 +29,11 @@
         {{/if}}
         {{#if session.isAuthenticated}}
           {{#link-to 'create-badges' class='item ui orange text'}}
-                CREATE BADGE
+                CREATE BADGES
             {{/link-to}}
         {{else}}
             {{#link-to 'login' class='item ui orange text'}}
-                CREATE BADGE
+                CREATE BADGES
             {{/link-to}}
         {{/if}}
     </div>
