--- a/frontend/app/templates/admin/reports/list.hbs
+++ b/frontend/app/templates/admin/reports/list.hbs
@@ -21,10 +21,10 @@
         <tr>
             <th colspan="4">
                 <div class="ui right floated pagination menu">
-                    <a class="icon item">
+                    <a class="icon item" {{action 'prevPage'}}>
                         <i class="left chevron icon"></i>
                     </a>
-                    <a class="icon item">
+                    <a class="icon item" {{action 'nextPage'}}>
                         <i class="right chevron icon"></i>
                     </a>
                 </div>
