Fixes #1279 : Made settings section responsive

--- a/frontend/app/styles/partials/my-profile.scss
+++ b/frontend/app/styles/partials/my-profile.scss
@@ -23,10 +23,10 @@
 
 
 .profile-change {
-  left: 60px;
+  left: 24%;
   opacity: 0;
   position: absolute;
-  top: 80px;
+  top: 50%;
   transition: 0.5s ease;
 }
 
