Fixes #1287 : Added password for OAuth users

--- a/frontend/app/templates/components/user-table.hbs
+++ b/frontend/app/templates/components/user-table.hbs
@@ -91,15 +91,15 @@
       <form class="ui form">
           <div class="ui field">
               <label>Email</label>
-              {{input type=email value=userEdit.email}}
+              {{input type='email' value=userEdit.email}}
           </div>
           <div class="ui field">
               <label>Username</label>
-              {{input type=text value=userEdit.username}}
+              {{input type='text' value=userEdit.username}}
           </div>
           <div class="ui field">
               <label>PhotoURL</label>
-              {{input type=text value=userEdit.photoURL}}
+              {{input type='text' value=userEdit.photoURL}}
           </div>
       </form>
     </div>
