--- a/frontend/app/templates/login.hbs
+++ b/frontend/app/templates/login.hbs
@@ -3,3 +3,33 @@
     {{forms/login-form login=(action 'login')}}
   </div>
 </div>
+
+{{#ui-modal name='passwordForm' class='passwordForm' detachable=true onApprove=(action 'approveModal') onDeny=(action 'denyModal')}}
+<i class="close icon"></i>
+  <div class="header">
+    Please set your Password
+  </div>
+  <div class="content">
+      <div class="description">
+          <form class="ui form">
+              <div class="ui field">
+                  <label>Password</label>
+                  {{input type='password' value=formPassword}}
+              </div>
+              <div class="ui field">
+                  <label>Verify password</label>
+                  {{input type='password' value=formConfirmPassword}}
+              </div>
+          </form>
+      </div>
+  </div>
+  <div class="actions">
+    <div class="ui black deny button">
+      Close
+    </div>
+    <div class="ui positive right labeled icon button">
+      Submit
+      <i class="checkmark icon"></i>
+    </div>
+  </div>
+{{/ui-modal}}
