--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -51,6 +51,9 @@
         <div class="ui form width-container">
             <p>
                 <b>Select from one of the background sources</b>
+                <a class="ui icon orange basic button guide" data-tooltip="Best Suitable Image -> Size(width x height): 749 X 1049px & Resolution: 300 DPI"  data-position="right center">
+                    <i class="info icon"></i>
+                </a>
             </p>
             {{#ui-accordion class="styled fluid"}}
             <div class="title" onclick={{action 'defImageClicked'}}>
