Fixes #1291 : Adding loading bar showing progress of UI

--- a/frontend/app/templates/admin/content/index.hbs
+++ b/frontend/app/templates/admin/content/index.hbs
@@ -1,4 +1,4 @@
-<form class="ui form" {{action 'submitForm' on='submit'}}>
+<form class="ui {{if isLoading 'loading'}} form" {{action 'submitForm' on='submit'}}>
     {{#each model as |socialMedia|}}
     <div class="field">
         <div class="ui left icon input">
