--- a/frontend/app/templates/components/user-component/user-password.hbs
+++ b/frontend/app/templates/components/user-component/user-password.hbs
@@ -1,7 +1,7 @@
 <h2 class="ui header">Password</h2>
 {{#if user.password}}
     <h5 class="ui dividing header">Change your password or recover your current one.</h5>
-        <form class="ui form" {{action 'updateUserPassword' on="submit"}}>
+        <form class="ui {{if isLoading 'loading'}} form" {{action 'updateUserPassword' on="submit"}}>
             <div class="field">
                 <label>Current Password</label>
                     <div class="fields">
