--- a/frontend/app/templates/my-profile.hbs
+++ b/frontend/app/templates/my-profile.hbs
@@ -1,1 +1,1 @@
-{{user-component/my-profile user=user session=session sendProfileImage=(action 'updateProfileImage') sendUserName=(action 'updateUserName') sendUserPassword=(action 'updateUserPassword')}}
+{{user-component/my-profile isLoadingName=isLoadingName isLoadingPassword=isLoadingPassword user=user session=session sendProfileImage=(action 'updateProfileImage') sendUserName=(action 'updateUserName') sendUserPassword=(action 'updateUserPassword')}}
