Adds Add-More card in my-badges

--- a/frontend/app/templates/components/user-component/my-badges.hbs
+++ b/frontend/app/templates/components/user-component/my-badges.hbs
@@ -33,6 +33,11 @@
             </div>
           </div>
         {{/each}}
+        <div class="card">
+          <a class="" href="/create-badges">
+            <img src="/images/add_more.png" style="margin-top: 70px">
+          </a>
+        </div>
         </div>
       </div>
       <div class="ui horizontal divider"></div>
