--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -5,15 +5,15 @@
                 <b>Name your Badges</b>
             </p>
             {{#ui-accordion class="styled fluid"}}
-            <div class="title">
-                <i class="plus icon"></i>
-                Enter Name
-            </div>
-            <div class="content">
-                <div class="center aligned">
-                    {{ data-component/name-component sendName=(action 'mutateName')}}
+                <div class="title">
+                    <i class="plus icon"></i>
+                    Enter Name
                 </div>
-            </div>
+                <div class="content">
+                    <div class="center aligned">
+                        {{ data-component/name-component sendName=(action 'mutateName')}}
+                    </div>
+                </div>
             {{/ui-accordion}}
         </div>
     </div>
@@ -26,24 +26,24 @@
                 </a>
             </p>
             {{#ui-accordion class="styled fluid"}}
-            <div class="title" onclick={{action "csvClicked"}}>
-                <i class="plus icon"></i>
-                Add CSV File
-            </div>
-            <div class="content">
-                <div class="center aligned">
-                    {{ data-component/csv-component sendCSV=(action 'mutateCSV') }}
+                <div class="title" onclick={{action "csvClicked"}}>
+                    <i class="plus icon"></i>
+                    Add CSV File
                 </div>
-            </div>
-            <div class="title" onclick={{action "manualClicked"}}>
-                <i class="plus icon"></i>
-                Add Manual Data
-            </div>
-            <div class="content">
-                <div class="center aligned">
-                    {{ data-component/text-component sendText=(action 'mutateText') }}
+                <div class="content">
+                    <div class="center aligned">
+                        {{ data-component/csv-component sendCSV=(action 'mutateCSV') }}
+                    </div>
                 </div>
-            </div>
+                <div class="title" onclick={{action "manualClicked"}}>
+                    <i class="plus icon"></i>
+                    Add Manual Data
+                </div>
+                <div class="content">
+                    <div class="center aligned">
+                        {{ data-component/text-component sendText=(action 'mutateText') }}
+                    </div>
+                </div>
             {{/ui-accordion}}
         </div>
     </div>
@@ -53,15 +53,15 @@
                 <b>Select from one of the Paper Sizes</b>
             </p>
             {{#ui-accordion class="styled fluid"}}
-            <div class="title">
-                <i class="plus icon"></i>
-                Paper Size
-            </div>
-            <div class="content">
-                <div class="center aligned">
-                    {{ badge-component/badge-size sendBadgeSize=(action 'mutateBadgeSize') }}
+                <div class="title">
+                    <i class="plus icon"></i>
+                    Paper Size
                 </div>
-            </div>
+                <div class="content">
+                    <div class="center aligned">
+                        {{ badge-component/badge-size sendBadgeSize=(action 'mutateBadgeSize') }}
+                    </div>
+                </div>
             {{/ui-accordion}}
         </div>
     </div>
@@ -69,38 +69,39 @@
         <div class="ui form width-container">
             <p>
                 <b>Select from one of the background sources</b>
-                <a class="ui icon orange basic button guide" data-tooltip="Best Suitable Image -> Size(width x height): 749 X 1049px & Resolution: 300 DPI"  data-position="right center">
+                <a class="ui icon orange basic button guide" data-tooltip="Best Suitable Image -> Size(width x height): 749 X 1049px & Resolution: 300 DPI"
+                    data-position="right center">
                     <i class="info icon"></i>
                 </a>
             </p>
             {{#ui-accordion class="styled fluid"}}
-            <div class="title" onclick={{action 'defImageClicked'}}>
-                <i class="plus icon"></i>
-                Default Images
-            </div>
-            <div class="content">
-                <div class="center aligned">
-                    {{ background-component/def-image-component defImages=defImages sendDefImage=(action 'mutateBackground') }}
+                <div class="title" onclick={{action 'defImageClicked'}}>
+                    <i class="plus icon"></i>
+                    Default Images
                 </div>
-            </div>
-            <div class="title" onclick={{action 'bgColorClicked'}}>
-                <i class="plus icon"></i>
-                Select from Background color
-            </div>
-            <div class="content">
-                <div class="center aligned">
-                    {{ background-component/color-bg-component sendDefColor=(action 'mutateDefColor') }}
+                <div class="content">
+                    <div class="center aligned">
+                        {{ background-component/def-image-component defImages=defImages sendDefImage=(action 'mutateBackground') }}
+                    </div>
                 </div>
-            </div>
-            <div class="title" onclick={{action 'custImgClicked'}}>
-                <i class="plus icon"></i>
-                Upload a custom image
-            </div>
-            <div class="content">
-                <div class="center aligned">
-                    {{ background-component/image-component sendImage=(action 'mutateCustomImage') }}
+                <div class="title" onclick={{action 'bgColorClicked'}}>
+                    <i class="plus icon"></i>
+                    Select from Background color
                 </div>
-            </div>
+                <div class="content">
+                    <div class="center aligned">
+                        {{ background-component/color-bg-component sendDefColor=(action 'mutateDefColor') }}
+                    </div>
+                </div>
+                <div class="title" onclick={{action 'custImgClicked'}}>
+                    <i class="plus icon"></i>
+                    Upload a custom image
+                </div>
+                <div class="content">
+                    <div class="center aligned">
+                        {{ background-component/image-component sendImage=(action 'mutateCustomImage') }}
+                    </div>
+                </div>
             {{/ui-accordion}}
         </div>
     </div>
@@ -110,46 +111,65 @@
                 <b>Select from following font customizations</b>
             </p>
             {{#ui-accordion class="styled fluid"}}
-            <div class="title">
-                <i class="plus icon"></i>
-                Font Family
-            </div>
-            <div class="content">
-                <div class="center aligned">
-                    {{ text-component/font-type sendDefFont=(action 'mutateCustomFont')}}
+                <div class="title">
+                    <i class="plus icon"></i>
+                    Font Family
                 </div>
-            </div>
-            <div class="title">
-                <i class="plus icon"></i>
-                Font Color
-            </div>
-            <div class="content">
-                <div class="center aligned">
-                    {{ text-component/font-color sendDefFontColor=(action 'mutateDefFontColor')}}
+                <div class="content">
+                    <div class="center aligned">
+                        {{ text-component/font-type sendDefFont=(action 'mutateCustomFont')}}
+                    </div>
                 </div>
-            </div>
-            <div class="title">
-                <i class="plus icon"></i>
-                Font Size
-            </div>
-            <div class="content">
-                <div class="center aligned">
-                    {{ text-component/font-size sendDefSize=(action 'mutateFontSize')}}
+                <div class="title">
+                    <i class="plus icon"></i>
+                    Font Color
                 </div>
-            </div>
+                <div class="content">
+                    <div class="center aligned">
+                        {{ text-component/font-color sendDefFontColor=(action 'mutateDefFontColor')}}
+                    </div>
+                </div>
+                <div class="title">
+                    <i class="plus icon"></i>
+                    Font Size
+                </div>
+                <div class="content">
+                    <div class="center aligned">
+                        {{ text-component/font-size sendDefSize=(action 'mutateFontSize')}}
+                    </div>
+                </div>
             {{/ui-accordion}}
         </div>
     </div>
     <button {{action "submitForm"}} class="ui fluid orange {{if authToken.isEmailVerified '' 'disabled'}} button">Create Badges</button>
     {{#each userError as |error|}}
-    <p>{{error.message}}</p>
+        <p>{{error.message}}</p>
     {{/each}}
-    <div class="ui divider"></div>
     {{#if showProgress}}
         <div class="ui segment">
             <div class="ui centered aligned grid">{{progressState}}</div>
             <div class="ui divider"></div>
             {{ember-progress-bar progress=progress options=(hash color='orange')}}
+        </div>
+    {{/if}}
+    {{#if badgeGenerated}}
+        <div class="ui positive message">
+            <i class="close icon"></i>
+            <div class="header">
+                Badge generated successfully
+            </div>
+            <p>Please visit this link to download badges
+                <a href="{{badgeGeneratedLink}}">Link</a>
+            </p>
+            <script type="text/javascript">
+                $('.message .close')
+                    .on('click', function () {
+                        $(this)
+                            .closest('.message')
+                            .transition('fade')
+                            ;
+                    });
+            </script>
         </div>
     {{/if}}
 </div>
