Improved the Segment of My Badges

--- a/frontend/app/templates/components/user-component/my-badges.hbs
+++ b/frontend/app/templates/components/user-component/my-badges.hbs
@@ -4,8 +4,8 @@
         My Badges
       </a>
     </div>
-    <div class="ui segment">
-      <div class="ui link cards">
+    <div class="ui basic segment">
+      <div class="ui cards">
         {{#each model as |badge|}}
           <div class="card">
             <div class="image">
