Modified User Guide

--- a/frontend/app/templates/components/user-component/user-guide.hbs
+++ b/frontend/app/templates/components/user-component/user-guide.hbs
@@ -20,14 +20,21 @@
                     <table class="ui celled structured table">
                         <thead>
                             <tr>
-                                <th rowspan="2">First Name</th>
-                                <th rowspan="2">Last Name</th>
-                                <th rowspan="2">Position</th>
-                                <th rowspan="2">Organisation/Project</th>
-                                <th rowspan="2">Social Handle</th>
+                                <th rowspan="2">First Line</th>
+                                <th rowspan="2">Second Line</th>
+                                <th rowspan="2">Third Line</th>
+                                <th rowspan="2">Fourth Line</th>
+                                <th rowspan="2">Fifth Line</th>
                             </tr>
                         </thead>
                         <tbody>
+                            <tr>
+                                <td >First Name</td>
+                                <td >Last Name</td>
+                                <td >Position</td>
+                                <td >Organisation/Project</td>
+                                <td >Social Handle</td>
+                            </tr>
                             <tr>
                                 <td>Deepjyoti</td>
                                 <td>Mondal</td>
