Sets background color of badgeyay to white

--- a/frontend/app/styles/partials/nav-bar.scss
+++ b/frontend/app/styles/partials/nav-bar.scss
@@ -1,3 +1,7 @@
+.header.item {
+  background-color: #ffffff !important;;
+}
+
 .orange.text {
   color: #F2711C !important;
   font-weight: 300 !important;
